Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ button:hover{background:#1e293b}
   margin-bottom:8px;
 }
 
+.muted{color:#94a3b8;font-size:13px}
+
 footer{
   padding:10px;
   text-align:center;
@@ -71,10 +73,6 @@ footer{
 
   <select id="sector">
     <option value="ALL">Toda la sucursal</option>
-    <option>CARNICERIA</option>
-    <option>VERDULERIA</option>
-    <option>FIAMBRES Y LACTEOS</option>
-    <option>ALMACEN</option>
   </select>
 
   <button onclick="generar()">Generar reporte</button>
@@ -85,21 +83,38 @@ footer{
 </main>
 
 <footer>
-Datos en tiempo real · Google Sheets
+Control inteligente · Datos en tiempo real
 </footer>
 
 <script>
 const URL_API =
 "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLinSnPuChMLpmL3HLTh7jyvjRx1e1wfH8tohBdYcJilAIhxFexmJFaDFnUKYR6dtZtdKNcPcDXzUohPZua9NULr_J14K3LIR2IjnOnDiohh0Q38HLTk1LI33BME60E4jgmmDCPrgILNPn9JufNln9Od0WH9iMGi3Y14WDUygyg3M8AsYZuK38Y6jQScEpJk_Iq8d2iK6Kce9kZPeqq8hkebC4pbxrl50OR60as1S1gTGjilX-ROxRKSkKGlMg&lib=MZrD42Mo3kLRTVRl9Hx16jtuNG_C6aXEm";
 
+/* CARGAR SECTORES DINÁMICOS */
+fetch(URL_API)
+  .then(r=>r.json())
+  .then(d=>{
+    if(d.sectores){
+      const sel=document.getElementById("sector");
+      d.sectores.forEach(s=>{
+        const o=document.createElement("option");
+        o.value=s;
+        o.textContent=s;
+        sel.appendChild(o);
+      });
+    }
+  });
+
 async function generar(){
   const dias = document.getElementById("dias").value;
   const sector = document.getElementById("sector").value;
 
+  const box = document.getElementById("resultado");
+  box.innerHTML = `<div class="section"><span class="muted">Generando reporte…</span></div>`;
+
   const res = await fetch(`${URL_API}&dias=${dias}&sector=${sector}`);
   const data = await res.json();
 
-  const box = document.getElementById("resultado");
   box.innerHTML = "";
 
   /* RESUMEN */
@@ -122,28 +137,22 @@ async function generar(){
     data.advertencias.forEach(p => box.innerHTML += card(p));
   }
 
+  if(!data.alertas.length && !data.advertencias.length){
+    box.innerHTML += `<div class="section"><span class="muted">✔ Sin alertas ni advertencias en el período seleccionado.</span></div>`;
+  }
+
   /* RANKING */
-  if(data.ranking.length){
-    box.innerHTML += `<div class="section"><div class="section-title">📈 Ranking del período</div></div>`;
+  if(data.ranking?.length){
+    box.innerHTML += `<div class="section"><div class="section-title">📈 Ranking</div></div>`;
     data.ranking.forEach(p => box.innerHTML += card(p));
   }
 
-  /* MÁS FRECUENTE */
   if(data.mas_frecuente){
-    box.innerHTML += `
-    <div class="section">
-      <div class="section-title">🔁 Producto más frecuente</div>
-      ${card(data.mas_frecuente)}
-    </div>`;
+    box.innerHTML += `<div class="section"><div class="section-title">🔁 Producto más frecuente</div>${card(data.mas_frecuente)}</div>`;
   }
 
-  /* MÁS RAG */
   if(data.mas_rag){
-    box.innerHTML += `
-    <div class="section">
-      <div class="section-title">⚠️ Producto con más RAG</div>
-      ${card(data.mas_rag)}
-    </div>`;
+    box.innerHTML += `<div class="section"><div class="section-title">⚠️ Producto con más RAG</div>${card(data.mas_rag)}</div>`;
   }
 }
 
@@ -151,9 +160,8 @@ function card(p){
   return `
   <div class="item">
     <strong>${p.producto}</strong> (${p.sku})<br>
-    ${p.nivel || ""} ${p.motivo || ""}<br>
-    Evento máx: ${p.cantidad_evento_max} ${p.unidad}<br>
-    Acumulado: ${p.cantidad_acumulada_periodo}
+    Evento máx: ${p.maxEvento || p.cantidad_evento_max} ${p.unidad}<br>
+    Acumulado: ${p.acumulado || p.cantidad_acumulada_periodo}
   </div>`;
 }
 </script>
